Fixed BG image on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,9 +3,9 @@
 }
 
 .bgWrap {
-  position: fixed;
-  height: 100%;
-  width: 100%;
+  position: absolute;
+  min-height: 100vh;
+  width: 100vw;
   overflow: hidden;
   z-index: -1;
 }
@@ -17,8 +17,7 @@
   text-align: center;
   align-items: center;
   justify-content: center;
-  padding-top: 7%;
-  padding-left: 3%;
+  padding-top: 10%;
   text-shadow: 2px 2px 2px #9F2042;
   cursor: default;
   user-select: none;
